# BatFix

./: .gitignore  .pre-commit-config.yaml  CLI11.hpp  CMakeCache.txt  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  cmake_install.cmake
cfgs/java_cfgs_foo/: ADD_1_TO_A_GIVEN_NUMBER.java  ADD_1_TO_A_GIVEN_NUMBER_1.java  ADD_TWO_NUMBERS_WITHOUT_USING_ARITHMETIC_OPERATORS.java  ANALYSIS_OF_ALGORITHMS_SET_2_ASYMPTOTIC_ANALYSIS.java  AREA_CIRCUMSCRIBED_CIRCLE_SQUARE.java  AREA_OF_A_HEXAGON.java  AREA_OF_THE_CIRCLE_THAT_HAS_A_SQUARE_AND_A_CIRCLE_INSCRIBED_IN_IT.java  AREA_SQUARE_CIRCUMSCRIBED_CIRCLE.java  ARRAY_ELEMENT_MOVED_K_USING_SINGLE_MOVES.java  ARRAY_RANGE_QUERIES_ELEMENTS_FREQUENCY_VALUE.java  BASIC_AND_EXTENDED_EUCLIDEAN_ALGORITHMS.java  BASIC_AND_EXTENDED_EUCLIDEAN_ALGORITHMS_1.java  BELL_NUMBERS_NUMBER_OF_WAYS_TO_PARTITION_A_SET.java  BINARY_REPRESENTATION_OF_NEXT_NUMBER.java  BINARY_SEARCH.java  BIN_PACKING_PROBLEM_MINIMIZE_NUMBER_OF_USED_BINS.java  BREAKING_NUMBER_FIRST_PART_INTEGRAL_DIVISION_SECOND_POWER_10.java  BREAK_NUMBER_THREE_PARTS.java  BREAK_NUMBER_THREE_PARTS_1.java  CAESAR_CIPHER.java  CALCULATE_ANGLE_HOUR_HAND_MINUTE_HAND.java  CALCULATE_AREA_TETRAHEDRON.java  CALCULATE_MAXIMUM_VALUE_USING_SIGN_TWO_NUMBERS_STRING.java  CALCULATE_VOLUME_DODECAHEDRON.java  CALCULATING_FACTORIALS_USING_STIRLING_APPROXIMATION.java  CASSINIS_IDENTITY.java  CEILING_IN_A_SORTED_ARRAY.java  CEILING_IN_A_SORTED_ARRAY_1.java  CENTER_ELEMENT_OF_MATRIX_EQUALS_SUMS_OF_HALF_DIAGONALS.java  CHANGE_ARRAY_PERMUTATION_NUMBERS_1_N.java  CHANGE_BITS_CAN_MADE_ONE_FLIP.java  CHANGE_BITS_CAN_MADE_ONE_FLIP_1.java  CHECK_ARRAY_CONTAINS_CONTIGUOUS_INTEGERS_DUPLICATES_ALLOWED.java  CHECK_ARRAY_CONTAINS_CONTIGUOUS_INTEGERS_DUPLICATES_ALLOWED_1.java  CHECK_ARRAY_MAJORITY_ELEMENT.java  CHECK_ARRAY_REPRESENTS_INORDER_BINARY_SEARCH_TREE_NOT.java  CHECK_CHARACTERS_GIVEN_STRING_CAN_REARRANGED_FORM_PALINDROME_1.java  CHECK_DIVISIBILITY_LARGE_NUMBER_999.java  CHECK_EXIST_TWO_ELEMENTS_ARRAY_WHOSE_SUM_EQUAL_SUM_REST_ARRAY.java  CHECK_GIVEN_CIRCLE_LIES_COMPLETELY_INSIDE_RING_FORMED_TWO_CONCENTRIC_CIRCLES.java  (+697 more)
cfgs/python_cfgs/: ADD_1_TO_A_GIVEN_NUMBER.txt  ADD_1_TO_A_GIVEN_NUMBER_1.txt  ADD_TWO_NUMBERS_WITHOUT_USING_ARITHMETIC_OPERATORS.txt  ALTERNATIVE_SORTING.txt  ANALYSIS_OF_ALGORITHMS_SET_2_ASYMPTOTIC_ANALYSIS.txt  AREA_OF_A_HEXAGON.txt  AREA_OF_THE_CIRCLE_THAT_HAS_A_SQUARE_AND_A_CIRCLE_INSCRIBED_IN_IT.txt  AREA_SQUARE_CIRCUMSCRIBED_CIRCLE.txt  ARRAY_ELEMENT_MOVED_K_USING_SINGLE_MOVES.txt  ARRAY_RANGE_QUERIES_ELEMENTS_FREQUENCY_VALUE.txt  BASIC_AND_EXTENDED_EUCLIDEAN_ALGORITHMS.txt  BINARY_SEARCH.txt  CAESAR_CIPHER.txt  (+676 more)
src/: CFGMatchingUtils.h  CMakeLists.txt  ClangCompressedCFG.cpp  ClangCompressedCFG.h  ClangUtils.h  ClangVisitors.cpp  ClangVisitors.h  CodePreprocessing.cpp  CodePreprocessing.h  Enumerator.cpp  Enumerator.h  ExecutionTraces.cpp  ExecutionTraces.h  HyperGraph.cpp  HyperGraph.h  JavaGraph.cpp  JavaGraph.h  Makefile  MaxSATWrapper.cpp  MaxSATWrapper.h  SemanticErrors.cpp  SemanticErrors.h  SyntaxErrors.cpp  SyntaxErrors.h  Synthesizer.cpp  Synthesizer.h  cfg.rs  cmake_install.cmake  lib.rs  main.cpp  main.rs  test_programs.py
src/scripts/: batfix_fl.py  codex.py  extract_cfg.py  run_pdb.py  sbfl.py  separate_bugs.py  test_st_translations.py
(+8411 files in other folders)
