[package]
name = "BatFix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
derive-getters = "0.3.0"
tree-sitter = "0.20.10"
tree-sitter-java = "0.20.0"

[build-dependencies]
cc="*"
